[gd_scene load_steps=13 format=2]

[ext_resource path="res://BebasNeue Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/menus/DeathMenu.gd" type="Script" id=2]
[ext_resource path="res://art/UI/Full Moon - background.png" type="Texture" id=3]
[ext_resource path="res://art/characters/32x32 Heroes Down.png" type="Texture" id=4]
[ext_resource path="res://src/ui/buttons/MainMenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/menu/Victory v2.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="WinMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Full Moon - background" type="Sprite" parent="."]
modulate = Color( 0.196078, 0.529412, 0.47451, 1 )
position = Vector2( 381.666, 416.372 )
texture = ExtResource( 3 )

[node name="32x32 Heroes Down" type="Sprite" parent="."]
position = Vector2( 704, 256 )
texture = ExtResource( 4 )
region_enabled = true

[node name="LoadingLabel" type="Label" parent="."]
margin_left = 400.0
margin_top = 494.185
margin_right = 599.0
margin_bottom = 558.185
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Loading..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 399.4
margin_top = 320.0
margin_right = 559.4
margin_bottom = 374.0
rect_min_size = Vector2( 160, 50 )
mouse_filter = 1
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="RestartButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Play Again
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWonLabel" type="Label" parent="."]
margin_left = 336.0
margin_top = 64.0
margin_right = 649.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 5 )
text = "You Won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="."]
margin_left = 243.794
margin_top = 214.303
margin_right = 743.794
margin_bottom = 313.303
custom_fonts/font = SubResource( 6 )
text = "After rescuing your friend, both of you narrowly manage to escape.
You hope that this is the last time you'll see these woods..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
